# GrannyConverterLibrary

./: .gitignore  2020.3.1 - Shortcut.lnk  CMakeLists.txt  CMakeSettings.json  Cargo.toml  build with powershell.ps1  build.rs  i_kleintempel01-01_col.GR2
cmake/: mycustomadditions.cmake
examples/converter/: GrannyZipExplore.cpp  GrannyZipExplore.h  main.cpp  main.h
src/: lib.rs  main.cpp  main.h
src/gcl/exporter/: fbxexporter.cpp  fbxexporterskeleton.cpp
src/gcl/importer/: grannyformat.cpp
